--- a/poyasnizagistu/users/templates/users/reg.html
+++ b/poyasnizagistu/users/templates/users/reg.html
@@ -1,15 +1,29 @@
 {% extends 'blog/base.html' %}
+{% load static %}
 
 {% block content %}
-<form method="post">
-  {% csrf_token %}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img class="round-img"  src='{% static "blog/images/logo.jpg" %}' alt="PoyasniZaGistu" >
+      <p class="fs-3 fw-weight-bolder text-white text-center">Приветствую тебя, мой дорогой друг!</p>
+      <p class="fst-italic text-white text-center">Меня зовут Эдгар. Спасибо тебе за проявленный интерес к Гистологии! Чтобы получить больше познавательного и увлекательного контента по этой замечательной науке, присоединяйся к нашему сообществу "Поясни За Гисту"</p>
+    </div>
+    <div class="col">
+      <form method="post">
+        {% csrf_token %}
+        <p class="text-center reg-title">Регистрация</p>
+        {% for f in form %}
+        <p><label class="form-label fw-light"  for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+        <div class="form-error">{{f.errors}}</div>
+        <div class="form-error">{{ form.non_field_errors }}</div>
+        {% endfor %}
+        <p class="form-reg"><button type="submit" class="btn btn-outline-warning btn-reg">Регистрация</button></p>
+      </form>
+    </div>
+  </div>
+</div>
 
-{% for f in form %}
-  <p class="form-reg"><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
-  <div class="form-error">{{f.errors}}</div>
-{% endfor %}
-  <div class="form-error">{{ form.non_field_errors }}</div>
-  <button type="submit" class="btn btn-outline-info btn-sm">Регистрация</button>
-</form>
+
 
 {% endblock %}
