--- a/poyasnizagistu/blog/templates/blog/base.html
+++ b/poyasnizagistu/blog/templates/blog/base.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="stylesheet" href='{% static "blog/css/styles.css" %}'>
+    <link rel="stylesheet" href='{% static "blog/js/test.js" %}'>
 </head>
 
 <body style="background-image: url('{% static "blog/images/back.jpeg" %}');">
