--- a/poyasnizagistu/blog/templates/blog/home.html
+++ b/poyasnizagistu/blog/templates/blog/home.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div class="content">
     <p class="test-class "> Контент Контент Контент Контент Контент Контент
       Контент Контент Контент Контент Контент Контент Контент Контент Контент
       Контент Контент Контент Контент Контент Контент Контент Контент Контент
@@ -15,4 +16,5 @@
       Контент Контент Контент Контент Контент Контент Контент Контент Контент
 
     </p>
+</div>
 {% endblock %}
