--- a/poyasnizagistu/blog/templates/blog/base.html
+++ b/poyasnizagistu/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="stylesheet" href='{% static "blog/css/styles.css" %}'>
-    <link rel="stylesheet" href='{% static "blog/js/test.js" %}'>
+<!--    <link rel="stylesheet" href='{% static "blog/js/test.js" %}'>-->
 </head>
 
 <body style="background-image: url('{% static "blog/images/back.jpeg" %}');">
@@ -17,10 +17,16 @@
     <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid ">
             <a class="logo-container" href="{% url 'home' %}">
-                <img class="logo"  src='{% static "blog/images/logo.jpg" %}' alt="PoyasniZaGistu" width="60em" height="55em" >
+             {% if request.user.is_authenticated %}
+              <img class="logo"  src='{{ user.avatar.url }}' alt="Avatar" width="60em" height="55em" >
+             <a href="{% url 'profile' %}"><button type="button" class="btn btn-outline-warning btn-sm btn-profile">Профиль</button></a>
+             <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-secondary btn-sm">Выход</button></a>
+             {% else %}
+            <img class="logo"  src='{% static "blog/images/logo.jpg" %}' alt="PoyasniZaGistu" width="60em" height="55em" >
             </a>
-            <a href="{% url 'home' %}"><button type="button" class="btn btn-outline-danger btn-sm">Вход</button></a>
-            <a href="{% url 'reg' %}"><button type="button" class="btn btn-outline-info btn-sm" href="{% url 'home' %}">Регистрация</button></a>
+            <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-danger btn-sm">Вход</button></a>
+            <a href="{% url 'register' %}"><button type="button" class="btn btn-outline-info btn-sm">Регистрация</button></a>
+             {% endif %}
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="navbar-toggler-icon"></span>
 		    </button>
@@ -36,10 +42,8 @@
         </div>
 	</nav>
 {% endblock navbar %}
-    <div class="content">
       {% block content %}
       {% endblock %}
-    </div>
   <!-- ПОДВАЛ -->
     <footer class=" text-center text-white text-lg-start">
         <div class="text-footer">
