--- a/poyasnizagistu/users/templates/registration/password_change_form.html
+++ b/poyasnizagistu/users/templates/registration/password_change_form.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
         <div class="form-error">{{ form.non_field_errors }}</div>
     {% for f in form %}
-        <p class="sm-text label-ul-log"><label class="sm-text form-label-log" for="{{f.id_for_label}}">{{ f.label }}{% if f.field.required %}
+        <p class="sm-text label-ul-log "><label class="sm-text form-label-log label-psw" for="{{f.id_for_label}}">{{ f.label }}{% if f.field.required %}
         <span class="required">*</span>{% endif %} </label>{{f}}</p>
         <div class="form-error">{{f.errors}}</div>
     {% endfor %} 
