--- a/poyasnizagistu/blog/templates/blog/base.html
+++ b/poyasnizagistu/blog/templates/blog/base.html
@@ -11,7 +11,7 @@
 <!--    <link rel="stylesheet" href='{% static "blog/js/test.js" %}'>-->
 </head>
 
-<body style="background-image: url('{% static "blog/images/back.jpeg" %}');">
+<body style="background-image: url('{% static 'blog/images/back.jpeg' %}'); ">
 <!--   ВВЕРХНЯЯ ПАНЕЛЬ МЕНЮ -->
 {% block navbar %}
     <nav class="navbar navbar-expand-md navbar-dark">
