--- a/poyasnizagistu/blog/templates/blog/category.html
+++ b/poyasnizagistu/blog/templates/blog/category.html
@@ -2,13 +2,12 @@
 
 
 {% block title %}
-    <title>Блог</title>
+    <title>Категории</title>
 {% endblock %}
 
 
 {% block content %}
 
 {% include 'blog/base_blog.html' %}
- 
 
 {% endblock %}
