--- a/poyasnizagistu/blog/templates/blog/home.html
+++ b/poyasnizagistu/blog/templates/blog/home.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Главная</title>
+{% endblock %}
 
 {% block content %}
 <div class="content">
