--- a/poyasnizagistu/users/templates/registration/login.html
+++ b/poyasnizagistu/users/templates/registration/login.html
@@ -1,4 +1,9 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Вход</title>
+{% endblock %}
+
+
 {% block content %}
 <div class="fs-2 text-center title">Авторизация</div>
 {% if form.errors %}
