--- a/poyasnizagistu/users/templates/registration/password_change_done.html
+++ b/poyasnizagistu/users/templates/registration/password_change_done.html
@@ -1,9 +1,11 @@
 {% extends 'blog/base.html' %}
 
+{% block title %}
+    <title>Изменение пароля</title>
+{% endblock %}
+
 {% block content %}
 
 <h5 class="reg-h text-warning">Ваш пароль был успешно изменён!</h5>
-
-
 
 {% endblock %}
