--- a/poyasnizagistu/users/templates/registration/password_change_form.html
+++ b/poyasnizagistu/users/templates/registration/password_change_form.html
@@ -1,4 +1,8 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Изменение пароля</title>
+{% endblock %}
+
 {% block content %}
 <div class="passw">
     <form method="POST" >
