--- a/poyasnizagistu/users/templates/registration/password_reset_complete.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_complete.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Восстановление пароля</title>
+{% endblock %}
 
 {% block content %}
 
