--- a/poyasnizagistu/users/templates/registration/password_reset_form.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_form.html
@@ -1,4 +1,8 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Восстановление пароля</title>
+{% endblock %}
+
 {% block content %}
 
 <form action="" method="post">{% csrf_token %}
