--- a/poyasnizagistu/users/templates/registration/register.html
+++ b/poyasnizagistu/users/templates/registration/register.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block title %}
+    <title>Регистрация</title>
+{% endblock %}
 
 {% block content %}
 
