--- a/poyasnizagistu/users/templates/registration/password_reset_done.html
+++ b/poyasnizagistu/users/templates/registration/password_reset_done.html
@@ -1,4 +1,7 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Восстановление пароля</title>
+{% endblock %}
 {% block content %}
 <h5 class="reg-h">Мы отправили Вам на электронную почту инструкцию, как Вам поменять свой пароль. Если письмо не приходит более чем через 5 минут, то проверьте спам на почте и убедитесь, что вы ввели правильно свою электронную почту</h5>
 {% endblock %}
