--- a/poyasnizagistu/users/templates/registration/profile_change.html
+++ b/poyasnizagistu/users/templates/registration/profile_change.html
@@ -1,4 +1,8 @@
 {% extends 'blog/base.html' %}
+{% block title %}
+    <title>Изменение профиля</title>
+{% endblock %}
+
 {% block content %}
 
 <div class="profile">
