--- a/poyasnizagistu/blog/templates/blog/base_blog.html
+++ b/poyasnizagistu/blog/templates/blog/base_blog.html
@@ -1,48 +1,44 @@
-<div class="text-center">
-    <div class="btn-group">
-      <button disabled type="button" class="btn btn-dark">Категории</button>
-      <hr class="text-white">
-      <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-        <span class="visually-hidden"></span>
-      </button>
-      <ul class="dropdown-menu">
-        {% if cat_selected == 0 %}
-            <button class="dropdown-item active" type="button">Все категории</button>
-            {% else %}
-            <a href="{% url 'blog' %}"><button class="dropdown-item " type="button">Все категории</button></a>
-            {% endif %}
+{% load blog_tags %}
 
-            {% for c in cats %}
-            {% if c.pk == cat_selected %}
-            <button class="dropdown-item active" type="button">{{c.name}}</button>
-             {% else %}
-            <a class="cat" href="{{ c.get_absolute_url }}"><button class="dropdown-item " type="button">{{c.name}}</button></a>
-            {% endif %}
-            {% endfor %}
-      </ul>
-    </div>
-</div>
+{% showcats cat_selected=cat_selected%}
 
 <div class="profile-2">
-    {% for p in posts %}
-        {% if p.is_published%}
-        <div class="profile-cust">
-            <div class="container">
-                <span class="right" style="float:right;"> <p class="text-danger time">Категория: {{p.cat}}</p></span><span class="left" style="float:left;"><p class="text-muted time">{{p.time_create|date}}</p></span>
-            </div>
-            <br>
-            <hr class="text-white" style="margin-top:0%">
-            <h2 class="text-info fs-4 text-center">{{ p.title|truncatechars:80 }}</h2>
-            <hr class="text-white">
-            {% if p.photo %}
-            <img src="{{p.photo.url}}" style="width:100%;">
-            {% endif %}
-            <p class="text-light fs-9 text-blog">{{p.text|linebreaksbr|truncatechars:300}}</p>
-            <hr class="text-white">
-            <div class="text-center">
-                <a href="{{p.get_absolute_url}}"><button type="button" class="btn btn-outline-warning btn-sm btn-profile">Читать</button></a>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2  g-1">
+
+        {% for p in posts %}
+        <div class="col">
+        {% if p.is_published %}
+
+            <div class="profile-cust card h-100">
+                <div class="card-body">
+                    <div class="container">
+                        <span class="right" style="float:right;"> <p class="text-danger time">Категория: {{p.cat}}</p></span><span class="left" style="float:left;"><p class="text-muted time">{{p.time_create|date}}</p></span>
+                    </div>
+                    <br>
+                    <hr class="text-white" style="margin-top:0%">
+                    <h2 class="text-info fs-5 text-center">{{ p.title|truncatechars:51 }}</h2>
+                    <hr class="text-white">
+                    {% if p.photo %}
+                    <div class="text-center">
+                        <img class="image-post" src="{{p.photo.url}}">
+                    </div>
+                    <p class="text-light fs-9 text-blog ">{{p.text|linebreaksbr|truncatechars:300}}</p>
+                    {% else %}
+                    <p class="text-light fs-9 text-blog ">{{p.text|linebreaksbr|truncatechars:1400}}</p>
+                    {% endif %}
+
+                </div>
+                <div class="card-footer ">
+                    <hr class="text-white" style="margin-top:0%">
+                    <div class="text-center">
+                        <a href="{{p.get_absolute_url}}"><button type="button" class="btn btn-outline-warning btn-sm btn-profile">Читать</button></a>
+                    </div>
+                </div>
             </div>
         </div>
         {% endif%}
         {% endfor %}
+
+    </div>
+
 </div>
