--- a/poyasnizagistu/blog/templates/blog/post.html
+++ b/poyasnizagistu/blog/templates/blog/post.html
@@ -16,7 +16,7 @@
     <h2 class="text-info fs-4 text-center">{{one_post.title}}</h2>
     <hr class="text-white">
     {% if one_post.photo %}
-    <img src="{{one_post.photo.url}}" style="width:80%;">
+    <img src="{{one_post.photo.url}}" style="width:100%; height:450px; object-fit: cover;">
     {% endif %}
     <p class="text-light fs-9 text-blog ">{{one_post.text|linebreaksbr}}</p>
     <hr class="text-white" style="margin-top:0%">
